Ultimas Correções
Finalização de ultimos testes, validações ecorreções. Ajustes finais na documentação
